# CM32022-Coursework

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml  requirements.txt
C-tasks/: Makefile  c1.py  c2.py  c3.py  grid_search_results.csv  main.py
D-tasks/: Makefile  d5_dataset.py  dataset.py  plot.py  task_d1.py  task_d2.py  task_d3.py  task_d4.py  task_d5.py  task_d6.py  task_d7.py  test_check.py
D-tasks/models/: d4_m=0.1_fine.pth  d4_m=0.3_coarse.pth  d4_m=0.3_fine.pth  d4_m=0.5_coarse.pth  d4_m=0.5_fine.pth  d4_m=1.0_coarse.pth  d4_m=1.0_fine.pth  d4_m=1.5_coarse.pth  d4_m=1.5_fine.pth
