[project]
name = "cw"
version = "0.1.0"
description = ""
authors = [
    {name = "Subeen Regmi",email = "subeenregmi123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "opencv-contrib-python (>=4.13.0.92,<5.0.0.0)",
    "torch>=2.10.0",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
package = false
